[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "reddacted"
dynamic = ["version"]
description = "Analyze Reddit comments for PII and perform sentiment analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Taylor Wilsdon", email = "taylor@taylorwilsdon.com"}
]
keywords = ["reddact", "reddacted", "reddit", "llm", "pii", "sentiment", "analysis", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "cliff>=4.3.0",
    "praw>=7.7.1",
    "nltk>=3.8.1",
    "requests>=2.31.0",
    "six>=1.16.0",
    "httpx==0.27.2",
    "openai>=1.3.7",
    "rich>=13.7.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/taylorwilsdon/reddacted/issues"

[project.entry-points."reddacted.commands"]
listing = "reddacted.cli:Listing"
user = "reddacted.cli:User"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff",
    "build>=1.0.3"
]

[project.scripts]
reddacted = "reddacted.cli:main"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "no-guess-dev"
write_to = "reddacted/_version.py"
fallback_version = "0.1.1"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "asyncio: mark test as async/await test",
]
asyncio_default_fixture_loop_scope = "function"
