[metadata]
name = reddacted
version = attr: reddacted.__version__
author = Taylor Wilsdon
author_email = taylor@taylorwilsdon.com
description = Analyze Reddit comments for PII and perform sentiment analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taylorwilsdon/reddacted
project_urls =
    Bug Tracker = https://github.com/taylorwilsdon/reddacted/issues
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Environment :: Console
    Topic :: Text Processing :: Linguistic
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = reddact, reddacted, reddit, llm, pii, sentiment, analysis, nlp

[options]
packages = find:
python_requires = >=3.11
install_requires =
    cliff
    praw
    nltk
    requests
    six
    openai
    rich

[options.entry_points]
console_scripts =
    reddacted = reddacted.cli:main
reddacted.commands =
    listing = reddacted.cli:Listing
    user = reddacted.cli:User

[options.packages.find]
include = reddacted*
